--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ div.cuisine  p{
     text-align: center;
 }
 #cuisine1{
-    background-image: url(./Assets/indianCuisine.jpg);
+    background-image: url(./Assets/IndianCuisine.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
